--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend Test App</title>
+    <title>Frontend App</title>
     <script src=
         "https://d3js.org/d3.v4.min.js">
     </script>
